// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendedReminder renders correctly with custom link 1`] = `
<DocumentFragment>
  .cache-1rnzyp-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffefe6;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1eg4x39-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #ff8c69;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #cc4e18;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

<div
    class="edgwu7l4 cache-1rnzyp-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="warning"
        as="span"
        class="edgwu7l1 cache-1eg4x39-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <div>
      Custom Link
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-nq2heh-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #e1ebff;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1pm0yda-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #3f6ed8;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-1l8e6hs-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #1a4dbf;
}

.cache-1l8e6hs-StyledText-bodyC-variantStyles-StyledTitle.cache-1l8e6hs-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  padding: 0;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-nq2heh-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="info"
        as="span"
        class="edgwu7l1 cache-1pm0yda-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-1l8e6hs-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-1y87d4u-StyledButton-StyledButtonLink"
      href="/"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with error variant 1`] = `
<DocumentFragment>
  .cache-1dji071-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffe1e7;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-suiq77-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #dd3252;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-1ia650c-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #a6102d;
}

.cache-1ia650c-StyledText-bodyC-variantStyles-StyledTitle.cache-1ia650c-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  padding: 0;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-1dji071-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="danger"
        as="span"
        class="edgwu7l1 cache-suiq77-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-1ia650c-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-1y87d4u-StyledButton-StyledButtonLink"
      href="/"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with success variant 1`] = `
<DocumentFragment>
  .cache-1uzia3y-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #eafffb;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1uir2dr-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #22c8a2;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-105sj4w-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #149a7b;
}

.cache-105sj4w-StyledText-bodyC-variantStyles-StyledTitle.cache-105sj4w-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  padding: 0;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-1uzia3y-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="success"
        as="span"
        class="edgwu7l1 cache-1uir2dr-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-105sj4w-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-1y87d4u-StyledButton-StyledButtonLink"
      href="/"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with warning variant 1`] = `
<DocumentFragment>
  .cache-1rnzyp-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffefe6;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1eg4x39-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #ff8c69;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #cc4e18;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  padding: 0;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1y87d4u-StyledButton-StyledButtonLink:hover,
.cache-1y87d4u-StyledButton-StyledButtonLink:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-1rnzyp-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="warning"
        as="span"
        class="edgwu7l1 cache-1eg4x39-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-1y87d4u-StyledButton-StyledButtonLink"
      href="/"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly without link 1`] = `
<DocumentFragment>
  .cache-1rnzyp-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #ffefe6;
}

.cache-1vomz9r-StyledBadgeContainer {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1eg4x39-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #ff8c69;
  font-weight: 500;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #cc4e18;
}

.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle.cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle {
  margin-bottom: 8px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1na9pxk-StyledText-bodyD-variantStyles.cache-1na9pxk-StyledText-bodyD-variantStyles {
  margin-bottom: 8px;
}

<div
    class="edgwu7l4 cache-1rnzyp-StyledContainer"
  >
    <div
      class="cache-1vomz9r-StyledBadgeContainer edgwu7l3"
    >
      <div
        aria-label="warning"
        as="span"
        class="edgwu7l1 cache-1eg4x39-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        <div
          class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          10 days remaining
        </div>
      </div>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-186tlrr-StyledText-bodyC-variantStyles-StyledTitle"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1na9pxk-StyledText-bodyD-variantStyles"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
  </div>
</DocumentFragment>
`;
